[package]
name = "narutils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.15", features = ["derive"] }
dotenvy = "0.15.7"
promkit = "0.4.5"
regex = "1.10.6"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
ureq = { version = "2.10.1", features = ["json"] }
